Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-5350

0.14.0 fails to build on non-x86

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.14.0
    • 0.15.0, 0.14.1
    • Delphi - Compiler
    • None
    • Fedora rawhide

    Description

      ```

      make[3]: Entering directory '/builddir/build/BUILD/thrift-0.14.0/compiler/cpp'
      g++ -std=c++11 -DHAVE_CONFIG_H -I./src -Wall -Wextra -pedantic -Werror -O2 -flto=auto -ffat-lto-objects -fexceptions -g -grecord-gcc-switches -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -march=armv7-a -mfpu=vfpv3-d16 -mtune=generic-armv7-a -mabi=aapcs-linux -mfloat-abi=hard -c -o src/thrift/generate/thrift-t_delphi_generator.o `test -f 'src/thrift/generate/t_delphi_generator.cc' || echo './'`src/thrift/generate/t_delphi_generator.cc
      src/thrift/generate/t_delphi_generator.cc: In member function 'std::string t_delphi_generator::make_pascal_string_literal(std::string)':
      src/thrift/generate/t_delphi_generator.cc:1066:12: error: comparison is always true due to limited range of data type [-Werror=type-limits]
      1066 | if( (c >= 0) && (c < 32)) { // convert ctrl chars, but leave UTF-8 alone

      ~^~~
      cc1plus: all warnings being treated as errors
      make[3]: *** [Makefile:1154: src/thrift/generate/thrift-t_delphi_generator.o] Error 1

      ```

       

      https://koji.fedoraproject.org/koji/taskinfo?taskID=62017099

      Attachments

        Issue Links

          Activity

            People

              opoplawski Orion Poplawski
              opoplawski Orion Poplawski
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m