THRIFT-5350 char is unsigned on non-x86 arches, use signed char to avoid compiler warning about always true comparisons Patch: Orion Poplawski

This closes #2331